HTTP - Delete city by townCode
