# routers/city.js
@@ -3,15 +3,16 @@ model = require('../models')
 
 // Router for HTTP GET - "/cities"
 exports.getCities = function (request, response) {
-    controller.list(model.City, response);
+    let propertyValue = request.params.townCode;
+    if(!propertyValue){
+       controller.list(model.City, response);
+    }
 }
 
-// Router for HTTP GET - "/users"
-exports.getUsers = function(req, res){
-    controller.list(model.User, res);
-}
 
-// Router for HTTP GET - "/authenicate"
-exports.getAuthenticationToken = function(req, res){
-    controller.authenticate(model.User, req, res);
+// Router for HTTP DELETE - "/cities/:townName"
+exports.deleteCity = function(req, res){
+    let propertyValue = req.params.townCode;
+    let searchObject = {townCode : propertyValue}
+    controller.delete(model.City, searchObject, req, res);
 }
